--- a/Languages project 2/cr.ac.ucr.lenguajes.ionic.angular.BCIC/cr/ac/ucr/ionic/angular/BCIC/package.json
+++ b/Languages project 2/cr.ac.ucr.lenguajes.ionic.angular.BCIC/cr/ac/ucr/ionic/angular/BCIC/package.json
@@ -35,6 +35,7 @@
     "bootstrap": "^4.4.0",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.5.1",
     "mdbootstrap": "^4.19.0",
     "ng-uikit": "^0.1.6",
     "ng-uikit-pro-standard": "^1.0.0",
